--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "fuse.js": "^7.0.0",
         "laravel-vite-plugin": "^1.0",
         "lucide-vue-next": "^0.468.0",
         "marked": "^15.0.12",
